--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-google-maps/api": "^2.19.2",
     "@types/node": "20.5.9",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
